task-15/frontend-something-expose-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-something
  namespace: sodikmirzo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend-something
  type: ClusterIP
