task-15/frontend-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-something
  namespace: sodikmirzo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: k8s.ittech.uz
    http:
      paths:
      - backend:
          service:
            name: frontend-something
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - k8s.ittech.uz
      secretName: letsencrypt-prod
